# NdkForSecret

./: settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/ndkforsecret/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: hello_jni.cpp
app/src/main/java/com/example/ndkforsecret/: JniUtil.java  MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/ndkforsecret/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
jarlibrary/: build.gradle
jarlibrary/src/androidTest/java/com/example/jarlibrary/: ExampleInstrumentedTest.java
jarlibrary/src/main/: AndroidManifest.xml
jarlibrary/src/main/java/com/example/jarlibrary/: JarUtils.java
jarlibrary/src/main/res/values/: strings.xml
jarlibrary/src/test/java/com/example/jarlibrary/: ExampleUnitTest.java
